Bug 463739 - Ephemeral Kalendar crash while switching between task lists
Summary: Ephemeral Kalendar crash while switching between task lists
Status: RESOLVED FIXED
Alias: None
Product: Merkuro
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.12.0
Platform: Arch Linux Linux
: VHI crash
Target Milestone: ---
Assignee: Claudio Cambra
URL:
Keywords: drkonqi
: 467025 467246 467600 468031 470101 472099 475010 477308 478684 486375 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-01-02 16:46 UTC by Alastair Campbell
Modified: 2024-09-17 17:35 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alastair Campbell 2023-01-02 16:46:02 UTC
Application: kalendar (22.12.0)

Qt Version: 5.15.7
Frameworks Version: 5.101.0
Operating System: Linux 6.1.1-arch1-1 x86_64
Windowing System: X11
Distribution: "Arch Linux"
DrKonqi: 5.26.4 [KCrashBackend]

-- Information about the crash:
I was clicking between task lists in Kalendar when the application crashed. I use the etesync account provider. Unfortunately I have not been able to reproduce but hopefully the attached crash logs are helpful. Happy to help diagnose

The crash does not seem to be reproducible.

-- Backtrace:
Application: Kalendar (kalendar), signal: Segmentation fault
Content of s_kcrashErrorMessage: std::unique_ptr<char []> = {get() = <optimized out>}
[KCrash Handler]
#6  KCalendarCore::Calendar::isLoading() const (this=0x0) at /usr/src/debug/kcalendarcore/kcalendarcore-5.101.0/src/calendar.cpp:1407
#7  0x0000559d8ac1610e in MultiDayIncidenceModel::resetLayoutLines() (this=0x559d8d831110) at /usr/src/debug/kalendar/kalendar-22.12.0/src/models/multidayincidencemodel.cpp:222
#8  0x00007f06c5abda51 in QtPrivate::QSlotObjectBase::call(QObject*, void**) (a=0x7ffe960a6890, r=<optimized out>, this=0x559d8d831370, this=<optimized out>, r=<optimized out>, a=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#9  doActivate<false>(QObject*, int, void**) (sender=0x559d8d831128, signal_index=3, argv=0x7ffe960a6890) at kernel/qobject.cpp:3919
#10 0x00007f06c5abffaf in QTimer::timeout(QTimer::QPrivateSignal) (this=<optimized out>, _t1=...) at .moc/moc_qtimer.cpp:205
#11 0x00007f06c5ab0b86 in QObject::event(QEvent*) (this=0x559d8d831128, e=0x7ffe960a6a00) at kernel/qobject.cpp:1324
#12 0x00007f06c6778b1c in QApplicationPrivate::notify_helper(QObject*, QEvent*) (this=<optimized out>, receiver=0x559d8d831128, e=0x7ffe960a6a00) at kernel/qapplication.cpp:3637
#13 0x00007f06c5a8cf98 in QCoreApplication::notifyInternal2(QObject*, QEvent*) (receiver=0x559d8d831128, event=0x7ffe960a6a00) at kernel/qcoreapplication.cpp:1064
#14 0x00007f06c5ad7493 in QTimerInfoList::activateTimers() (this=0x559d8bb480e0) at kernel/qtimerinfo_unix.cpp:643
#15 0x00007f06c5ad7ad2 in timerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:183
#16 idleTimerSourceDispatch(GSource*, GSourceFunc, gpointer) (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:230
#17 0x00007f06c3d1687b in g_main_dispatch (context=0x7f06b8005010) at ../glib/glib/gmain.c:3454
#18 g_main_context_dispatch (context=0x7f06b8005010) at ../glib/glib/gmain.c:4172
#19 0x00007f06c3d6dc89 in g_main_context_iterate.constprop.0 (context=0x7f06b8005010, block=1, dispatch=1, self=<optimized out>) at ../glib/glib/gmain.c:4248
#20 0x00007f06c3d15132 in g_main_context_iteration (context=0x7f06b8005010, may_block=1) at ../glib/glib/gmain.c:4313
#21 0x00007f06c5ad7c4c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x559d8bb43ea0, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#22 0x00007f06c5a8573c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x7ffe960a6cb0, flags=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#23 0x00007f06c5a90269 in QCoreApplication::exec() () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#24 0x00007f06c5f3a102 in QGuiApplication::exec() () at kernel/qguiapplication.cpp:1870
#25 0x00007f06c6776f2a in QApplication::exec() () at kernel/qapplication.cpp:2829
#26 0x0000559d8abd1ee4 in main(int, char**) (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/kalendar/kalendar-22.12.0/src/main.cpp:188
[Inferior 1 (process 3673) detached]

Reported using DrKonqi
Comment 1 Nicolas Fella 2023-03-20 12:24:14 UTC
*** Bug 467600 has been marked as a duplicate of this bug. ***
Comment 2 Carl Schwan 2023-04-24 11:50:00 UTC
*** Bug 468031 has been marked as a duplicate of this bug. ***
Comment 3 Carl Schwan 2023-04-24 11:52:41 UTC
*** Bug 467246 has been marked as a duplicate of this bug. ***
Comment 4 Carl Schwan 2023-04-24 11:53:44 UTC
*** Bug 467025 has been marked as a duplicate of this bug. ***
Comment 5 Bug Janitor Service 2023-04-24 17:07:41 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/kalendar/-/merge_requests/360
Comment 6 Claudio Cambra 2023-04-25 15:37:34 UTC
Git commit c1275c39582e3d35af212b3c1977c7c971b36c0b by Claudio Cambra, on behalf of Carl Schwan.
Committed on 25/04/2023 at 15:30.
Pushed by clau-cambra into branch 'master'.

Fix checking if a non existing calendar

Check again in 100ms to avoid a crash to avoid an occasional data race

M  +1    -1    src/models/multidayincidencemodel.cpp

https://invent.kde.org/pim/kalendar/commit/c1275c39582e3d35af212b3c1977c7c971b36c0b
Comment 7 Carl Schwan 2023-04-25 15:39:57 UTC
Git commit a539c40f28d0f6658ff267725d638a03b5ddb9ee by Carl Schwan.
Committed on 25/04/2023 at 15:39.
Pushed by carlschwan into branch 'release/23.04'.

Fix checking if a non existing calendar

Check again in 100ms to avoid a crash to avoid an occasional data race


(cherry picked from commit c1275c39582e3d35af212b3c1977c7c971b36c0b)

M  +1    -1    src/models/multidayincidencemodel.cpp

https://invent.kde.org/pim/kalendar/commit/a539c40f28d0f6658ff267725d638a03b5ddb9ee
Comment 8 cwo 2024-09-17 17:14:30 UTC
*** Bug 486375 has been marked as a duplicate of this bug. ***
Comment 9 cwo 2024-09-17 17:25:18 UTC
*** Bug 478684 has been marked as a duplicate of this bug. ***
Comment 10 cwo 2024-09-17 17:25:20 UTC
*** Bug 477308 has been marked as a duplicate of this bug. ***
Comment 11 cwo 2024-09-17 17:25:23 UTC
*** Bug 470101 has been marked as a duplicate of this bug. ***
Comment 12 cwo 2024-09-17 17:25:25 UTC
*** Bug 475010 has been marked as a duplicate of this bug. ***
Comment 13 cwo 2024-09-17 17:25:28 UTC
*** Bug 472099 has been marked as a duplicate of this bug. ***