Fix checking if a non existing calendar

Check again in 100ms to avoid a crash to avoid an occasional data race

BUG: 463739